Portfolio HTML File

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,9 @@
 </div>
 
 <div style="position: relative; top:90px;" class="social">
-	<b> Follow Me:</b>
+	<b> My Accounts:</b>
 	<a target=_blank href="https://github.com/BashayerNouri" class="fa fa-github"></a>
+	<a href="mailto:bashayer_nouri@hotmail.com" class="fa fa-envelope"></a>
 </div>
 
 
